Fix overflow

--- a/app/src/components/Row.css
+++ b/app/src/components/Row.css
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1080px;
-  overflow: hidden;
+  overflow: auto;
   clear: both;
   padding: 0 0.34em;
 }
